Fix sizing to remove unecessary scrollbars.

--- a/client/src/app/game/game/game.component.scss
+++ b/client/src/app/game/game/game.component.scss
@@ -28,4 +28,7 @@
     height: 100%;
     width: 100%;
 }
+.border-box {
+    box-sizing: border-box;
+}
 
